Edits from client

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Сайт персонального тренера по кроссфиту и аэробной гимнастики">
 	<title>Данила Шохин – персональный тренер. Кроссфит и аэробная гимнастика</title>
 	
 	<link rel="apple-touch-icon" href="assets/favicons/apple-touch-icon.png">
@@ -224,11 +225,11 @@
 						</div>
 						<div class="about__text__item">
 							<b>Работа:</b>
-							<p>Персональная работа с Подопечными 2004 года «Планета Фитнес»</p>
+							<p>Персональная работа с Подопечными c 2004 года «Планета Фитнес»</p>
 							<p>Сооснователь кроссфит залов Crossfit Flash (c 2013), главный тренер и спортивный директор</p>
 							<p>Основатель проекта Vitruvians Training (c 2020) - Онлайн Тренировки для дома без оборудования со своим весом</p>
 							<p>Главный тренер проекта по физической подготовке и выживанию в бою RmFight</p>
-							<p>Персональная работа в качестве тренера по физподготовке с сотрудниками Вымпел, Альфа, СО, СОБР, Рысь</p>
+							<p>Персональная работа в качестве тренера по физподготовке с сотрудниками Вымпел, Альфа, ССО, СОБР, Рысь</p>
 							<p>Персональная работа с игроками профессиональных клубов и игроками Сборной России по регби</p>
 							<p>Персональная работа с фигуристами Сборной России</p>
 							<p>Раскрыл потенциал тела и духа +2000 подопечных</p>
@@ -305,9 +306,9 @@
 						<p>
 							Я работаю с абсолютно разными психотипами людей, и под каждого человека – подбираю индивидуальный метод работы.
 							При этом – всегда придерживаюсь своих принципов: на тренировке мы готовим ВАС к жизни, а это значит, что абсолютно каждый подопечный в работе со мной становится более собранным, воле устойчивым, ответственным (за свой собственный результат), способным терпеть и достигать поставленной цели. Чтобы, победив себя в зале – Вы были готов побеждать и в жизни. <br><br>
-							То, чем я занимаюсь – это моя основная деятельность и дело моей жизни. <br><br>
+							Это моя основная деятельность и дело моей жизни. <br><br>
 							В спорте высших достижений я – с 10 лет, тренирую – с 18. С 28 – владелец собственных кроссфит залов, через которые прошло за всё время более 10 000 человек. <br><br>
-							Я не понаслышке знаю разницу между тренировками атлетов для достижения победы на соревнованиях и тренировками людей, для которых спорт является инструментом – для того, чтобы быть в форме и проживать каждый свой день максимально ярко и качественно. <br><br>
+							Я не понаслышке знаю разницу между тренировками атлетов для достижения победы на соревнованиях и тренировками людей, для которых спорт является инструментом для того, чтобы быть в форме и проживать каждый свой день максимально ярко и качественно. <br><br>
 							В своей работе я использую очень много методов (начиная от легкой атлетики и гимнастики, заканчивая кроссфитом, тяжелой атлетикой и игровыми видами спорта, комбинируя их в зависимости от поставленной задачи). <br><br>
 							При этом, я делаю акцент в первую очередь на работе с базой, используя максимально простые (базовые) тренировочные движения, которые создадут фундамент вашей подготовки, вместо использования сложно-координационных движений, при которых повышается риск получения травмы. <br><br>
 							Помимо профессиональных аспектов, меня выбирают за высочайший уровень энергии и тот заряд, который я передаю каждому подопечному, на котором он затем идёт и сворачивает горы – решая свои повседневные задачи.
@@ -317,7 +318,7 @@
 						<b>3 вещи, которые выделяют меня:</b>
 						<ul>
 							<li><span>01</span> Спортсмен мирового уровня, мастер спорта международного класса</li>
-							<li><span>02</span> Знаю разницу между тренировкой профессиональных спортсменов и тренировками людей – для поддержания (создания) здорового образа жизни: я владелец кроссфит зала и зала единоборств, я тренировал профессиональных спортсменов, я тренирую и девушек в том числе, и я работаю индивидуально с людьми, для которых важен индивидуальный подход и полная конфиденциальность. Я комбинирую между собой столько тренировочных методов, сколько необходимо – для наилучшего результата</li>
+							<li><span>02</span> Знаю разницу между тренировкой профессиональных спортсменов и тренировками людей – для поддержания (создания) здорового образа жизни. Я комбинирую между собой столько тренировочных методов, сколько необходимо – для наилучшего результата</li>
 							<li><span>03</span> Мой взгляд на здоровье и физическую активность.Я считаю, что каждый человек должен стремиться к тому, что прожить минимум до 120 лет, а не программировать себя на старость с 30, как это делает большинство. Я считаю, что если вам 40 – это прекрасный возраст для того, чтобы тренироваться, изучать новое, внедрять хобби в свою жизнь и строить планы</li>
 						</ul>
 					</div>
@@ -335,12 +336,12 @@
 							Продолжительность и качество жизни – мой приоритет в работе.
 							Мы перестаём делать какие-то вещи не из-за того, что стареем. А мы стареем потому, что перестаём делать то, что нам нравилось, то для чего нужно стараться и прикладывать усилия. <br><br>
 							«Что можешь быть дороже жизни? И во сколько ты её оцениваешь?»
-							Жизнь – одна. И то, как ты относишься к своему телу и своему здоровью – напрямую влияет и на продолжительность вашей жизни и на её качество.
-							Продолжительность – очень важна. Но она меркнет, если в вашей жизни – нет жизни. Если вы живёте тускло, чувствуете себя – вяло, тяжело, не энергично. И не пользуетесь энергией и ресурсами своего организма на максимум. <br><br>
-							Большинство моих подопечных – это люди, которые уже – высоко реализованы, иначе говоря – у которых есть в жизни всё.
-							И задача, для решения которой ко мне обращаются – это улучшить КАЧЕСТВО своей жизни: её чувствования, уровень энергии, здоровья, функциональных возможностей организма. <br><br>
+							Жизнь – одна.
+							Продолжительность – очень важна. Но она меркнет, если в вашей жизни – нет жизни. Если вы живёте тускло, чувствуете себя – вяло, тяжело. И не пользуетесь энергией и ресурсами своего организма на максимум. <br><br>
+							Большинство моих подопечных – это люди, которые уже – высоко реализованы.
+							И задача, для решения которой ко мне обращаются – это улучшить КАЧЕСТВО своей жизни и функциональных возможностей организма. <br><br>
 							Чтобы ощущать – что вся жизнь – впереди. Что твой уровень энергии – также высок, как и в 20-25 лет. Что твои физические кондиции позволяют тебе заниматься любым хобби (бег, теннис, яхтинг, сёрфинг, тяжелая атлетика – всё, что угодно). Чтобы быть примером для своей семьи и своего окружения. <br><br>
-							Моя задача работы с каждым подопечным – избавиться от этой угнетающей установки: «Я уже старый (мне 40+) / мне уже поздно (мне 50+) /я просто доживаю свою жизнь». И поменять на абсолютно новое видение: когда ты и в 50 и в 60 – бегаешь-плаваешь, работаешь с отягощениями, живёшь полноценной жизнью и продолжаешь заниматься своими хобби с такой же страстью, как ты это делал и 20-30 лет назад. <br><br>
+							Моя задача в работе с каждым подопечным – избавиться от этой угнетающей установки: «Я уже старый (мне 40+) / мне уже поздно (мне 50+) /я просто доживаю свою жизнь». И поменять на абсолютно новое видение: когда ты и в 50, и в 60 – бегаешь-плаваешь, работаешь с отягощениями, живёшь полноценной жизнью и продолжаешь заниматься своими хобби с такой же страстью, как ты это делал и 20-30 лет назад. <br><br>
 							Я считаю, что каждый человек должен стремиться к тому, что прожить минимум до 120 лет, а не программировать себя на старость с 30, как это делает большинство. Я считаю, что если вам 40 – это прекрасный возраст для того, чтобы тренироваться, изучать новое, внедрять хобби в свою жизнь и строить планы.
 						</p>
 					</div>
@@ -487,7 +488,6 @@
 							<img src="assets/icons/line-01.svg" alt="">
 							<span>30 000 рублей</span>
 						</div>
-						<!-- <a class="link link--secondary" href="#">Записаться на тренировку</a> -->
 					</div>
 
 					<div class="price__item">
@@ -514,8 +514,8 @@
 		<section class="contacts" id="contacts">
 			<div class="container">
 				<h2>Мои контакты</h2>
-				<a href="tel:+7 999 999 99 99" aria-label="Позвонить на телефон">+7 999 999 99 99</a>
-				<a href="mailto:danila@site.ru" aria-label="Перейти в почтовый клиент и написать по адресу">danila@site.ru</a>
+				<a href="tel:+7 916 108 60 60" aria-label="Позвонить на телефон">+7 916 108 60 60</a>
+				<a href="https://wa.me/79161086060?text=Здравствуйте, интересуют Персональные тренировки..." aria-label="Перейти в воцап и написать">Связь по whatsapp</a>
 			</div>
 		</section>
 	</main>
@@ -530,11 +530,11 @@
 		</div>
 		<div class="networks">
 			<div class="footer__social">
-				<a href="#" aria-label="Перейти во вконтакт"><img src="assets/icons/vk.svg" alt="Логотип Вконтакте"></a>
-				<a href="#" aria-label="Перейти в телегам"><img src="assets/icons/telegram.svg" alt="Логотип Телеграм"></a>
-				<a href="#" aria-label="Перейти в воцап"><img src="assets/icons/whatsapp.svg" alt="Логотип Воцап"></a>
+				<a href="https://vk.com/danila.shokhin" aria-label="Перейти во вконтакте"><img src="assets/icons/vk.svg" alt="Логотип Вконтакте"></a>
+				<a href="https://t.me/LordOfTheWod" aria-label="Перейти в телегам"><img src="assets/icons/telegram.svg" alt="Логотип Телеграм"></a>
+				<a href="https://wa.me/79161086060?text=Здравствуйте, интересуют Персональные тренировки..." aria-label="Перейти в воцап"><img src="assets/icons/whatsapp.svg" alt="Логотип Воцап"></a>
 			</div>
-			<a href="#" aria-label="Перейти на сайт разработчика">Сделано в Net7</a>
+			<a href="https://netseven.ru/" aria-label="Перейти на сайт разработчика">Сделано в Net7</a>
 		</div>
 	</div>
 	</footer>
