--- a/index.html
+++ b/index.html
@@ -373,48 +373,85 @@
 			<div class="container">
 				<h2>Дополнительные плюсы работы со мной</h2>
 				<div class="plus__grid">
+
 					<div class="plus__card">
-						<span>01</span>
-						<div>
-							<h3>Ответственность и никаких отговорок</h3>
-							<img src="assets/icons/turn-arrow.svg" alt="">
+						<div class="plus__card--front">
+							<span>01</span>
+							<div>
+								<h3>Ответственность и никаких отговорок</h3>
+								<img src="assets/icons/turn-arrow.svg" alt="">
+							</div>
+						</div>
+						<div class="plus__card--back">
+							<p>Я понимаю, что время = деньги. И когда мы работаем, всё моё внимание сосредоточено только на Вас. Я всегда дам Вам объективную обратную связь по той задаче, которую вы хотите достичь. Более того, если Ваша задача – нереальна, я Вам об этом скажу прямо. Но в то же время – я расскажу, насколько близко мы сможем к ней приблизиться. </p>
 						</div>
 					</div>
+
 					<div class="plus__card">
-						<span>02</span>
-						<div>
-							<h3>Высокие стандарты жизни</h3>
-							<img src="assets/icons/turn-arrow.svg" alt="">
+						<div class="plus__card--front">
+							<span>02</span>
+							<div>
+								<h3>Высокие стандарты жизни</h3>
+								<img src="assets/icons/turn-arrow.svg" alt="">
+							</div>
+						</div>
+						<div class="plus__card--back">
+							<p>Я работаю с людьми, которые привыкли к самому лучшему во всём в своей жизни. Лучший сервис, лучшие специалисты, лучшее окружение. Поэтому в сфере трансформации спортивной составляющей своей жизни – выбирают меня.</p>
 						</div>
 					</div>
+
 					<div class="plus__card">
-						<span>03</span>
-						<div>
-							<h3>Анонимность</h3>
-							<img src="assets/icons/turn-arrow.svg" alt="">
+						<div class="plus__card--front">
+							<span>03</span>
+							<div>
+								<h3>Анонимность</h3>
+								<img src="assets/icons/turn-arrow.svg" alt="">
+							</div>
+						</div>
+						<div class="plus__card--back">
+							<p>Многие из подопечных моего спортивного Клуба Crossfit Flash абсолютно не против и даже «за», когда я показываю их тренировки и результаты. Но я обеспечиваю полную анонимность в тех случаях, когда на это есть запрос, и никогда не разглашаю деталей ни тренировочного процесса, ни какой-либо другой информации частной жизни тех, с кем я работаю.</p>
 						</div>
 					</div>
+
 					<div class="plus__card">
-						<span>04</span>
-						<div>
-							<h3>«Медленный метаболизм и низкий тестостерон» – я знаю, как повернуть эти процессы вспять</h3>
-							<img src="assets/icons/turn-arrow.svg" alt="">
+						<div class="plus__card--front">
+							<span>04</span>
+							<div>
+								<h3>Медленный метаболизм и низкий тестостерон» – я знаю, как повернуть эти процессы вспять</h3>
+								<img src="assets/icons/turn-arrow.svg" alt="">
+							</div>
+						</div>
+						<div class="plus__card--back">
+							<p>После 35 лет метаболизм начинает замедляться, а уровень тестостерона – падает. Я знаю, как работать с тем, чтобы замедлить и повернуть вспять эти процессы. Как в целом работать с тем, чтобы поддерживать вашу энергию на высоком уровне.</p>
 						</div>
 					</div>
+
 					<div class="plus__card">
-						<span>05</span>
-						<div>
-							<h3>Трансформация вредных привычек</h3>
-							<img src="assets/icons/turn-arrow.svg" alt="">
+						<div class="plus__card--front">
+							<span>05</span>
+							<div>
+								<h3>Трансформация вредных привычек</h3>
+								<img src="assets/icons/turn-arrow.svg" alt="">
+							</div>
+						</div>
+						<div class="plus__card--back">
+							<p>Если у вас есть запрос на избавление от вредных привычек – мы можем решить и эту задачу в том числе.</p>
 						</div>
 					</div>
+
 					<div class="plus__card">
-						<span>06</span>
-						<div>
-							<h3>Коммуникация и нетворкинг</h3>
-							<img src="assets/icons/turn-arrow.svg" alt="">
+						<div class="plus__card--front">
+							<span>06</span>
+							<div>
+								<h3>Коммуникация и нетворкинг</h3>
+								<img src="assets/icons/turn-arrow.svg" alt="">
+							</div>
+						</div>
+						<div class="plus__card--back">
+							<p>В дополнении ко всему, я обладаю огромным количеством контактов абсолютно в разных областях и при необходимости – знакомлю своих подопечных друг с другом для их дальнейшего профессионального или личного взаимодействия.</p>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</section>
